Fixed a layout bugs

--- a/Mobile/CSS/style.css
+++ b/Mobile/CSS/style.css
@@ -5,7 +5,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   color: #393d41;
-  font-size: 1.2rem;
+  font-size: 1.65rem;
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -17,7 +17,7 @@ h1,
 h2,
 h3 {
   color: #25a2c3;
-  line-height: 1.5px;
+  line-height: 1.2em;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: bold;
@@ -34,7 +34,7 @@ header img {
 }
 
 .intro-container {
-  margin-top: -9px;
+  margin-top: -12px;
   width: 100%;
   box-sizing: border-box;
   background-image: url("/Assets/Esercizio/images/banner.jpg");
